Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,56 +1,49 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="EggdropZ : EGGLOVE." />
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>EggdropZ by chpasswd</title>
+    <title>EggdropZ</title>
   </head>
 
   <body>
 
-    <header>
-      <div class="container">
-        <h1>EggdropZ</h1>
-        <h2>EGGLOVE.</h2>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/chpasswd/egg">View on GitHub</a>
 
-        <section id="downloads">
-          <a href="https://github.com/chpasswd/egg/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/chpasswd/egg/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/chpasswd/egg" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+          <h1 id="project_title">EggdropZ</h1>
+          <h2 id="project_tagline">EGGLOVE.</h2>
 
-    <div class="container">
-      <section id="main_content">
-        <h1>!/bin/bash</h1>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/chpasswd/egg/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/chpasswd/egg/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-<p>wget <a>ftp://ftp.eggheads.org/pub/eggdrop/source/1.6/eggdrop1.6.21.tar.gz</a>
-gunzip -c eggdrop1.6.21.tar.gz | tar xopf -
-cd eggdrop1.6.21
-./configure
-make config
-make
-make install
-cd ..
-rm -r eggdrop1.6.21 eggdrop1.6.21.tar.gz
-cd eggdrop
-cd scripts
-wget <a href="https://github.com/chpasswd/tcl/archive/master.zip">https://github.com/chpasswd/tcl/archive/master.zip</a>
-unzip master.zip
-cd tcl-master
-mv * ..
-cd ..
-rm -r tcl-master 
-rm master.zip</p>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        
       </section>
     </div>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">EggdropZ maintained by <a href="https://github.com/chpasswd">chpasswd</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
