Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,21 @@
 
     <div class="container">
       <section id="main_content">
-        
+        <p><a href="https://gist.github.com/chpasswd/c0d99d6ef1d270534c00/raw/69ab2637140cf8aa5b79806c3f9d5f5cbcf89aa8/egg.sh">Automator script.</a></p>
+
+<p><a href="https://github.com/chpasswd/egg/tree/master/scripts">La lista de TCL disponibles es esta.</a></p>
+
+<p><a href="https://github.com/chpasswd/egg/blob/master/eggdrop.conf">Una vez creado tu eggdrop modifica tu config.</a></p>
+
+<p>Ej:
+Si quieres el modulo de twitter necesitaras cargar los siguientes scripts agregandolos al final de tu eggdrop.conf:</p>
+
+<p>source scripts/twitter.tcl
+source scripts/sha1.tcl
+source scripts/oauth.tcl
+source scripts/base64.tcl</p>
+
+<p>Una vez terminado,para correr tu bot, dentro de tu carpeta eggdrop ejecuta: <code>./eggdrop eggdrop.conf</code></p>
       </section>
     </div>
 
