Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1>EggdropZ</h1>
-        <h2>EGGLOVE.</h2>
+        <h2>EGGLOVE.CONF</h2>
 
         <section id="downloads">
           <a href="https://github.com/chpasswd/egg/zipball/master" class="btn">Download as .zip</a>
@@ -37,12 +37,15 @@
 <p>Ej:
 Si quieres el modulo de twitter necesitaras cargar los siguientes scripts agregandolos al final de tu eggdrop.conf:</p>
 
-<p>source scripts/twitter.tcl
-source scripts/sha1.tcl
-source scripts/oauth.tcl
-source scripts/base64.tcl</p>
+<p>source scripts/twitter.tcl</p>
 
-<p>Una vez terminado,para correr tu bot, dentro de tu carpeta eggdrop ejecuta: <code>./eggdrop eggdrop.conf</code></p>
+<p>source scripts/sha1.tcl</p>
+
+<p>source scripts/oauth.tcl</p>
+
+<p>source scripts/base64.tcl</p>
+
+<p>Una vez terminado, para correr tu bot, dentro de tu carpeta eggdrop ejecuta: <code>./eggdrop eggdrop.conf</code></p>
       </section>
     </div>
 
