--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       <section id="main_content">
         <p><a href="https://gist.github.com/chpasswd/dbb3fff60dfb8cb3212d/raw/d6249210dc0fe72d3fd435abfcc9eeff55ba2ba6/egg.sh">Automator script.</a></p>
 
+<p>Copia el codigo del automator script en <code>egg.sh</code> y despues ejecutado como script bash <code>bash egg.sh</code></p>
+
 <p><a href="https://github.com/chpasswd/egg/blob/master/eggdrop.conf">Una vez creado tu eggdrop modifica tu config.</a></p>
 
 <p>Ej:
